<?xml version="1.0" encoding="UTF-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory android:title="@string/oc_title">
        <ListPreference
            android:key="cpu_overclock"
            android:title="@string/cpu_overclock_title"
            android:entries="@array/cpu_overclock_entries"
            android:entryValues="@array/cpu_overclock_values"
            android:defaultValue="1008000" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/memory_title">
        <CheckBoxPreference android:key="ksm_enable"
            android:title="@string/ksm_enable_title"
            android:summary="@string/ksm_enable_summary"
            android:defaultValue="false" />
    </PreferenceCategory>

</PreferenceScreen>
